# improc-petrsu

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
improc-petrsu-core/: Cargo.toml
improc-petrsu-core/src/: binary_image.rs  bool_matrix.rs  ffi.rs
improc-petrsu-core/src/binary_image_converters/: mod.rs  threshold_binary_image_converter.rs
improc-petrsu-core/src/skeletonizers/: mod.rs
improc-petrsu-gtk/: .gitlab-ci.yml  Cargo.toml
improc-petrsu-gtk/src/cli/: cli.yml
improc-petrsu-gtk/src/cli/convert_to_binary_handler/: convert_to_binary_config.rs  mod.rs
improc-petrsu-gtk/src/cli/skeletonize_handler/: mod.rs  skeletonize_config.rs
improc-petrsu-gtk/src/gtk_ui/: mod.rs
src/: binary_image.rs  bool_matrix.rs  ffi.rs  image_processer.rs  lib.rs
src/binary_image_converters/: mod.rs  threshold_binary_image_converter.rs
src/skeletonizers/: eberly_skeletonizer.rs  mod.rs  rosenfeld_skeletonizer.rs  zhangsuen_skeletonizer.rs
src/skeletonizers/eberly_interior_algorithms/: four_interior_algorithm.rs  mod.rs  three_interior_algorithm.rs  two_interior_algorithm.rs
