[package]
name = "improc-petrsu-gtk"
version = "0.1.0"
authors = ["Denis Karpovskiy <geext29@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
improc-petrsu-core = { version = "0.2", path = "../improc-petrsu-core" }
image = "0.22"
clap = { version = "2.33.0", features = ["yaml"] }
gtk = { version = "0.7", features = ["v3_22_30"] }
gio = { version = "0.7", features = ["v2_58"] }
glib = { version = "0.8", features = ["v2_58"] }
gdk-pixbuf = "0.7"
log = "0.4.8"
env_logger = "0.6.2"
